--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
       Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
   </div>
-  <alert-modal>
-    <h1>AlertModal</h1>
+  <x-modal>
+    <h1>Modal</h1>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
       magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -23,7 +23,7 @@
       Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
     <button id="close">close</button>
-  </alert-modal>
+  </x-modal>
   <button id="open">open</button>
 </body>
 
